# src/controllers/game.controller.ts
@@ -1,6 +1,7 @@
-import { Body, Controller, Get, Route, Tags, Path, Post, Patch } from "tsoa";
+import { Body, Controller, Get, Route, Tags, Path, Post, Patch, Delete } from "tsoa";
 import { GameDTO } from "../dto/game.dto";
 import { gameService } from "../services/game.service";
+import { BadRequestError } from "../error/BadRequestError";
 
 @Route("games")
 @Tags("Games")
@@ -23,5 +24,19 @@ export class GameController extends Controller {
   @Patch("/{id}")
   public async updateGame(@Path() id: number, @Body() requestBody: Partial<GameDTO>): Promise<GameDTO | null> {
     return gameService.updateGame(id, requestBody);
+  }
+
+  @Delete("/{id}")
+  public async deleteGame(@Path() id: number): Promise<void> {
+    try {
+      await gameService.deleteGame(id);
+      this.setStatus(204); // No Content
+    } catch (error) {
+      if (error instanceof BadRequestError) {
+        this.setStatus(400); // Bad Request
+        throw new Error(error.message);
+      }
+      throw error;
+    }
   }
 }
